Fix video play icon not aligning center

--- a/app/assets/css/scss/modules/_posts.scss
+++ b/app/assets/css/scss/modules/_posts.scss
@@ -165,19 +165,17 @@
 }
 
 .post_content_thumbnail {
-  margin-top: em(9);
   @extend %row;
+  cursor: pointer;
+  margin: em(9) em(-10) em(-20);
+  width: calc(100% + #{em(10 * 2)});
   img {
-    margin: 0 0 em(-17) em(-10);
-    width: calc(100% + #{em(10 * 2)});
+    width: 100%;
     border-radius: 0 0 em(4) em(4);
   }
   @include media($mobile-landscape) {
-    margin-top: em(18);
-    img {
-      margin: 0 0 em(-33) em(-26);
-      width: calc(100% + #{em(26 * 2)});
-    }
+    margin: em(18) em(-25) em(-35);
+    width: calc(100% + #{em(26 * 2)});
   }
 }
 
@@ -186,12 +184,13 @@
 
 .is-video {
   position: relative;
-  float: left;
-  width: 100%;
   &:hover,
   &:focus {
     &:after {
       background: rgba(#000, 0);
+    }
+    &:before {
+      opacity: 0.5;
     }
   }
   &:before,
@@ -208,6 +207,7 @@
     top: 50%;
     transform: translate(-50%, -50%);
     z-index: 100;
+    transition: all 0.3s ease;
     @include media($mobile-landscape) {
       @include size(em(60));
     }
@@ -221,16 +221,14 @@
   &:after {
     top: 0;
     left: 0;
-    margin: 0 0 em(-17) em(-10);
-    width: calc(100% + #{em(10 * 2)});
-    height: 108%;
+    width: 100%;
+    height: 96%;
     background: rgba(#000, 0.3);
     content: '';
     transition: all 0.3s ease;
     border-radius: 0 0 em(4) em(4);
     @include media($mobile-landscape) {
-      margin: 0 0 em(-33) em(-26);
-      width: calc(100% + #{em(26 * 2)});
+      height: 98%;
     }
   }
 }
